<resources>
    <string name="app_name">Hacaton</string>

    <string name="greeting_activity_button">ВОЙТИ</string>
    <string name="greeting_activity_text_view_first">#ПОХОДЫ #СВОБОДА \n #ПРЕОДОЛЕНИЯ #ОТКРЫТИЯ</string>
    <string name="greeting_activity_text_view_second">ОПИШИ ПЕРЕВАЛ</string>
    <string name="greeting_activity_text_view_third">Наполняем каталог перевалов вместе</string>
    <string name="greeting_activity_description_image_logo">Logo of FSTR</string>
    <string name="greeting_activity_description_image_tourist">Image of a tourist</string>

    <string name="registration_activity_text_first">Добро пожаловать</string>
    <string name="registration_activity_text_second">Давайте знакомиться</string>
    <string name="registration_activity_text_third">Запишем вас:\n •в список помогавших наполнять базу перевалов\n •в качестве первопроходителей перевала, если он новый\n •в базу туристов ФСТР</string>
    <string name="registration_activity_text_surname">Фамилия</string>
    <string name="registration_activity_text_name">Имя</string>
    <string name="registration_activity_text_patronymic">Отчество</string>
    <string name="registration_activity_edit_text_email">yourname@mail.ru</string>
    <string name="registration_activity_text_email">E-mail будет логином и основным средством связи с вами</string>
    <string name="registration_activity_edit_text_number">+7_</string>
    <string name="registration_activity_text_number">По желанию</string>
    <string name="registration_activity_edit_text_social_network">ссылка на соцсети</string>
    <string name="registration_activity_text_social_network">По желанию</string>
    <string name="registration_activity_button">Войти</string>

    <string name="registration_activity_text_consent">Используя приложение, вы даёте согласие ФСТР\n на <a href="https://google.com">обработку персональных данных</a></string>
    <string name="bottom_navigation_bar_button_more">more</string>
    <string name="bottom_navigation_bar_button_search">search</string>

    <string name="base_activity_text_watch_all"><a href="https://tssr.ru/main/structura/2720/">Посмотреть базу перевалов</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>