<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registration_activity_text_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/registration_activity_text_first_margin_top"
        android:gravity="center"
        android:text="@string/registration_activity_text_first"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_activity_text_first_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/registration_activity_view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registration_activity_view_line_height"
        android:layout_marginTop="@dimen/registration_activity_view_line_margin_top"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_first" />

    <TextView
        android:id="@+id/registration_activity_text_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/registration_activity_text_second_margin_top"
        android:gravity="center"
        android:text="@string/registration_activity_text_second"
        android:textColor="@color/blue"
        android:textSize="@dimen/registration_activity_text_second_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_view_line" />

    <TextView
        android:id="@+id/registration_activity_text_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_third_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_third_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_third_margin_end"
        android:text="@string/registration_activity_text_third"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_third_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_second" />

    <EditText
        android:id="@+id/registration_activity_edit_text_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_surname_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_surname_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_surname_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/registration_activity_edit_text_surname_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_surname_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_surname_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_surname_padding_bottom"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_activity_edit_text_surname_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_third" />

    <TextView
        android:id="@+id/registration_activity_text_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_surname_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_surname_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_surname_margin_end"
        android:labelFor="@id/registration_activity_edit_text_surname"
        android:text="@string/registration_activity_text_surname"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_surname_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_surname" />

    <EditText
        android:id="@+id/registration_activity_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_name_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_name_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_name_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/registration_activity_edit_text_name_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_name_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_name_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_name_padding_bottom"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_activity_edit_text_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_surname" />

    <TextView
        android:id="@+id/registration_activity_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_name_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_name_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_name_margin_end"
        android:labelFor="@id/registration_activity_edit_text_name"
        android:text="@string/registration_activity_text_name"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_name" />

    <EditText
        android:id="@+id/registration_activity_edit_text_patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_patronymic_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_patronymic_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_patronymic_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:paddingStart="@dimen/registration_activity_edit_text_patronymic_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_patronymic_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_patronymic_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_patronymic_padding_bottom"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_activity_edit_text_patronymic_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_name" />

    <TextView
        android:id="@+id/registration_activity_text_patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_patronymic_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_patronymic_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_patronymic_margin_end"
        android:labelFor="@id/registration_activity_edit_text_patronymic"
        android:text="@string/registration_activity_text_patronymic"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_patronymic_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_patronymic" />

    <EditText
        android:id="@+id/registration_activity_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_email_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_email_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_email_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:hint="@string/registration_activity_edit_text_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/registration_activity_edit_text_email_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_email_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_email_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_email_padding_bottom"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_light"
        android:textSize="@dimen/registration_activity_edit_text_email_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_patronymic" />

    <TextView
        android:id="@+id/registration_activity_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_email_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_email_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_email_margin_end"
        android:labelFor="@id/registration_activity_edit_text_email"
        android:text="@string/registration_activity_text_email"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_email_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_email" />

    <EditText
        android:id="@+id/registration_activity_edit_text_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_number_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_number_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_number_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:hint="@string/registration_activity_edit_text_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="@dimen/registration_activity_edit_text_number_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_number_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_number_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_number_padding_bottom"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_light"
        android:textSize="@dimen/registration_activity_edit_text_number_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_email" />

    <TextView
        android:id="@+id/registration_activity_text_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_number_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_number_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_number_margin_end"
        android:labelFor="@id/registration_activity_edit_text_number"
        android:text="@string/registration_activity_text_number"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_number_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_number" />

    <EditText
        android:id="@+id/registration_activity_edit_text_social_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_edit_text_social_network_margin_start"
        android:layout_marginTop="@dimen/registration_activity_edit_text_social_network_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_edit_text_social_network_margin_end"
        android:background="@drawable/shape_edit_text_background"
        android:hint="@string/registration_activity_edit_text_social_network"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/registration_activity_edit_text_social_network_padding_start"
        android:paddingTop="@dimen/registration_activity_edit_text_social_network_padding_top"
        android:paddingEnd="@dimen/registration_activity_edit_text_social_network_padding_end"
        android:paddingBottom="@dimen/registration_activity_edit_text_social_network_padding_bottom"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_light"
        android:textSize="@dimen/registration_activity_edit_text_social_network_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_number" />

    <TextView
        android:id="@+id/registration_activity_text_social_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_text_social_network_margin_start"
        android:layout_marginTop="@dimen/registration_activity_text_social_network_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_text_social_network_margin_end"
        android:labelFor="@id/registration_activity_edit_text_social_network"
        android:text="@string/registration_activity_text_social_network"
        android:textColor="@color/grey"
        android:textSize="@dimen/registration_activity_text_social_network_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_edit_text_social_network" />

    <Button
        android:id="@+id/registration_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registration_activity_button_margin_start"
        android:layout_marginTop="@dimen/registration_activity_button_margin_top"
        android:layout_marginEnd="@dimen/registration_activity_button_margin_end"
        android:background="@drawable/shape_registration_activity_button"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/registration_activity_button"
        android:textSize="@dimen/registration_activity_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_text_social_network" />

    <TextView
        android:id="@+id/registration_activity_text_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/registration_activity_text_consent"
        android:textColor="@color/grey"
        android:textColorLink="@color/blue"
        android:textSize="@dimen/registration_activity_text_consent_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_activity_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar_background"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>